# berth

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
hello-berth/: berth.yml  docker-compose.yml
hello-berth/backend/: package.json  server.js
hello-berth/frontend/: package.json  server.js
src/: agent.rs  docker.rs  doctor.rs  down.rs  env.rs  ls.rs  main.rs  ports.rs  snapshot.rs  state.rs  types.rs  up.rs  validate.rs  worktree.rs
src/dashboard/: api.rs  auth.rs  index.html  mod.rs  sse.rs
src/hooks/: install.rs  mod.rs  resolve.rs
